Fix overflowing chat messages

--- a/src/styles/Chat.scss
+++ b/src/styles/Chat.scss
@@ -1,4 +1,5 @@
 .chat{
     min-height: calc(100vh - 110px);
     background-color: transparent;
+    padding: 10px 16px 60px 16px;
 }
