--- a/src/styles/ChatInput.scss
+++ b/src/styles/ChatInput.scss
@@ -1,5 +1,9 @@
 .chatInput{
-    position: relative;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 0 8px 0 #000;
 
     input{
         width: 100%;
