--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -10,6 +10,7 @@
     padding: 0 14px;
     background-color: #111;
     box-shadow: 0 0 8px 0 #000;
+    z-index: 1;
 
     .user{
         display: flex;
